# pyfastmp3decoder

./: .gitignore  LICENSE  MANIFEST.in  README.md  demo.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
lib/: minimp3.pyx
src/pyfastmp3decoder/: mp3decoder.py
