[metadata]
name = pyfastmp3decoder
version = 0.0.1
author = James Betker
author_email = 'none@none'
url = "https://github.com/neonbjb/pyfastmp3decoder"
license = "Apache Software License 2.0"
description = "A fast MP3 decoder for python, using minimp3"
long_description = file: README.md
python_requires = >=3.6
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =

[options.packages.find]
where = "src"
